--- a/package.json
+++ b/package.json
@@ -4,13 +4,25 @@
   "description": "Learning platform",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack --mode production",
+    "dev": "webpack serve"
   },
   "author": "Ivan Noskov",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.22.10",
+    "@babel/preset-env": "^7.22.10",
+    "autoprefixer": "^10.4.14",
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
+    "cssnano": "^6.0.1",
+    "html-webpack-plugin": "^5.5.3",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss-loader": "^7.3.3",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "acorn": "^8.10.0",
@@ -24,6 +36,7 @@
     "clone-deep": "^4.0.1",
     "colorette": "^2.0.20",
     "commander": "^2.20.3",
+    "core-js": "^3.32.0",
     "cross-spawn": "^7.0.3",
     "electron-to-chromium": "^1.4.485",
     "enhanced-resolve": "^5.15.0",
@@ -94,9 +107,5 @@
     "webpack-sources": "^3.2.3",
     "which": "^2.0.2",
     "wildcard": "^2.0.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "main"
   }
 }
